# gliberal-scMultipleX

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
jpynb/: 20230712_followup-Fractal_aggregateZarrToH5ad.ipynb  featX.ipynb  featX2-orglink.ipynb  featX3-speedup-nuclink-PlatyMatch.ipynb  featX4-aggregate.ipynb  fractal_postprocessing_example.ipynb  matching.py  run_platymatch_NAR220527.py
resources/scMultipleX_testdata/: fractal_workflow_example_OME_Zarrs.json
resources/scMultipleX_testdata/20200812-CardiomyocyteDifferentiation14-Cycle1.zarr/: .zattrs
scripts/: X1.py  X2.py  X3.py  X4.py  build_experiment.py  extract_well_features.py  feature_extraction.py
scripts/configs/: 00_build_experiment_R0.conf  00_build_experiment_R0.conf.example  00_build_experiment_R1.conf  00_build_experiment_R1.conf.example  01_extract_well_features_R0.conf  01_extract_well_features_R1.conf  02_organoid_linking.conf  02_organoid_linking.conf.example  03_nuclei_linking.conf  04-09_aggregation_R0.conf  04-09_aggregation_R1.conf  10-11_multiplex.conf.example  build_experiment.conf  build_experiment_R0.conf  build_experiment_R1.conf  config.ini.example  extract_well_features.conf  extract_well_features_R0.conf  extract_well_features_R1.conf  link_multiplexing_rounds.conf  nuclei_linking.conf  organoid_linking.conf  tidy_R0.conf  tidy_R1.conf
scripts/prefect/: 00_build_experiment.py  01_feature_extraction.py  02_organoid_linking.py  02_organoid_multiplex.py  03_nuclear_multiplex.py  03_run_nuc_link.py  04_aggregate_features.py  04_tidy_organoid_features.py  05_combine_nuc_mem_features.py  05_tidy_nuclei_features.py  06_aggregate_organoid_multiplex.py  06_tidy_membrane_features.py  07_aggregate_nuclear_multiplex.py  07_merge_nuc_mem_features.py  08_merge_organoid_linking.py  09_merge_platymatch_linking.py  10_link_multiplexed_organoids.py  11_link_multiplexed_nuclei.py  build_experiment_prefect.py  feature_extraction.py  organoid_linking.py  run_nuc_link.py  run_scmultiplex
src/scmultiplex/: __FRACTAL_MANIFEST__.json  __init__.py  config.py  logging.py
src/scmultiplex/aics_shparam/: shparam.py  shtools.py
src/scmultiplex/dev/: create_manifest.py  task_list.py
src/scmultiplex/dev/task_info/: annotate_child_mesh.md  annotate_mesh_by_child_features.md  apply_warpfield_registration.md  apply_z_illumination_correction.md  build_label_image.md  calculate_2d_rigid_shift.md  calculate_linking_consensus.md  calculate_object_linking.md  calculate_platymatch_registration.md  calculate_warpfield_registration.md  calculate_z_illumination_correction.md  cleanup_3d_child_labels.md  convert_3d_to_mip.md  copy_data_from_ref_to_moving_rounds.md  create_manifest.py  expand_labels.md  feature_measurements.md  mesh_measurements.md  (+10 more)
src/scmultiplex/faim_hcs/: LICENSE
src/scmultiplex/features/: FeatureExtraction.py  FeatureFunctions.py  FeatureProps.py  MeshExtraction.py  feature_wrapper.py
src/scmultiplex/fractal/: FractalHelperFunctions.py  README.md  __FRACTAL_MANIFEST__.json  _image_based_registration_hcs_allrounds_init.py  _image_based_registration_hcs_init.py  _init_group_by_well_for_multiplexing.py  annotate_child_mesh.py  annotate_mesh_by_child_features.py  apply_warpfield_registration.py  apply_z_illumination_correction.py  build_label_image.py  calculate_2d_rigid_shift.py  calculate_linking_consensus.py  calculate_object_linking.py  calculate_platymatch_registration.py  calculate_platymatching_registration.py  calculate_registration_label_based.py  calculate_warpfield_registration.py  calculate_z_illumination_correction.py  cleanup_3d_cell_segmentation.py  cleanup_3d_child_labels.py  convert_3d_to_mip.py  copy_data_from_ref_to_moving_rounds.py  detect_clipped_rois_across_rounds.py  expand_labels.py  feature_wrapper.py  fractal_helper_functions.py  fuse_touching_labels.py  init_select_all_knowing_reference.py  init_select_illumination_round.py  init_select_many_rounds.py  init_select_multiplexing_pairs.py  init_select_multiplexing_round.py  init_select_reference_knowing_all.py  init_select_single_round.py  new_args_schema.py  post_registration_cleanup.py  relabel_by_linking_consensus.py  run_measurement.py  scmultiplex_feature_measurements.py  (+12 more)
src/scmultiplex/illumination/: apply_correction_functions.py  calculate_correction_functions.py  illum_correction_functions.py
src/scmultiplex/linking/: NucleiLinking.py  NucleiLinkingFunctions.py  OrganoidLinking.py  OrganoidLinkingFunctions.py  matching.py
src/scmultiplex/meshing/: FilterFunctions.py  LabelFusionFunctions.py  MeshFunctions.py  MeshProjection.py
src/scmultiplex/platymatch/: LICENSE.txt  fix_random_seed.patch  patch_info.txt  run_platymatch.py
src/scmultiplex/plotting/: functions_classify.py  functions_io.py  functions_plotting.py  functions_roi_loading.py
src/scmultiplex/utils/: __init__.py  accumulate_utils.py  exclude_utils.py  fractal_utils.py  io.py  load_utils.py  ngio_utils.py  parse_utils.py  platymatch_utils.py  run_platymatch.py  save_utils.py
tests/: conftest.py
tests/faim_hcs/hcs/: test_experiment.py
tests/faim_hcs/records/: test_DefaultRecord.py  test_OrganoidRecord.py  test_WellRecord.py
tests/features/: test_FeatureFunctions.py
tests/fractal/: conftest.py  test.py  test_fractal_linking.py  test_fractal_measurement.py  test_manifest.py
tests/fractal/integration/: test_fractal_tasks.py
tests/fractal/unit/: test_fractal_helper_functions.py
tests/utils/: test_exclude_utils.py
(+188 files in other folders)
