[metadata]
name = scmultiplex
description = Feature extraction and linking of multiplexing data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-basel/gliberal-scMultipleX
author = Nicole Repina, Tim-Oliver Buchholz
author_email = nicole.repina@fmi.ch, tim-oliver.buchholz@fmi.ch
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/fmi-basel/gliberal-scMultipleX/issues
    Documentation = https://github.com/fmi-basel/gliberal-scMultipleX#README.md
    Source Code = https://github.com/fmi-basel/gliberal-scMultipleX
    User Support = https://github.com/fmi-basel/gliberal-scMultipleX/issues

[options]
packages = find:
install_requires =
    faim-hcs@git+https://github.com/fmi-faim/faim-hcs
    numcodecs
    numpy
    pandas
    scikit-image@git+https://github.com/scikit-image/scikit-image
    scipy
    tqdm
python_requires = >=3.8
package_dir =
    = src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src
