[metadata]
name = scmultiplex
description = Feature extraction and linking of multiplexing data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-basel/gliberal-scMultipleX
author = Nicole Repina, Tim-Oliver Buchholz
author_email = nicole.repina@fmi.ch, tim-oliver.buchholz@fmi.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: Apache-2.0
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/fmi-basel/gliberal-scMultipleX/issues
    Documentation = https://github.com/fmi-basel/gliberal-scMultipleX#README.md
    Source Code = https://github.com/fmi-basel/gliberal-scMultipleX
    User Support = https://github.com/fmi-basel/gliberal-scMultipleX/issues

[options]
packages = find:
install_requires =
    SimpleITK
    imagecodecs
    matplotlib
    numba
    numcodecs
    numpy
    pandas
    prefect==1.4
    scikit-image >= 0.20.0
    scikit-learn
    scipy
    tqdm
python_requires = >=3.8
package_dir =
    = src
setup_requires =
    setuptools-scm

[options.package_data]
scmultiplex = __FRACTAL_MANIFEST__.json

[options.extras_require]
fractal-tasks = 
    fractal-tasks-core >=0.9.4

[options.packages.find]
where = src
